kubernetes/catalog/vaultwarden/manifests/deployment.yaml
---
# Generated by InfraWeaver Community Apps from Unraid AppFeed
# Source: https://raw.githubusercontent.com/VandaLpr/unRAID-CA-templates/master/templates/vaultwarden.xml
# Category: Tools-Utilities
# Stars: 1449 | Downloads: 282980520
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
  namespace: vaultwarden
  labels:
    app.kubernetes.io/name: vaultwarden
    app.kubernetes.io/managed-by: infraweaver
    infraweaver.io/source: community-apps
    infraweaver.io/tier: simple
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: vaultwarden
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vaultwarden
    spec:
      containers:
        - name: vaultwarden
          image: vaultwarden/server
          ports:
            - containerPort: 80
              protocol: TCP
              name: webui-http-port
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 30
            failureThreshold: 10
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 30
            failureThreshold: 10
          volumeMounts:
            - name: vaultwarden-data-0
              mountPath: "/data"
          securityContext:
            runAsNonRoot: false
            allowPrivilegeEscalation: false
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "500m"
      volumes:
      - name: vaultwarden-data-0
        persistentVolumeClaim:
          claimName: vaultwarden-data-0
---
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: vaultwarden
  labels:
    app.kubernetes.io/name: vaultwarden
    infraweaver.io/source: community-apps
spec:
  selector:
    app.kubernetes.io/name: vaultwarden
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: webui-http-port
  type: ClusterIP
